@@ -19,6 +19,9 @@
 			<attribute name="time">
 				<description>Number of seconds you have to be idle before setting AWAY.</description>
 			</attribute>
+			<attribute name="only_noclient">
+				<description>If set, auto-away will only set AWAY when there are no clients connected to ctrlproxy.</description>
+			</attribute>
 		</element>
 	</configuration>
 
